examples/invalid/unknown-schema.whip
workflow UnknownSchema

class Review {
  status MissingStatus
}

coerce classify(summary string) -> MissingOutput {
  prompt "Classify {{ summary }}"
}
